# gitgui

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pubspec.yaml  rust.cmake
android/: .gitignore  CMakeLists.txt  build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gitgui/: MainActivity.kt
cmake/: CorrosionConfig.cmake
crates/base/: Cargo.toml
crates/base/src/: app.rs  git_index.rs  git_status.rs  git_utils.rs  lib.rs
crates/base/tests/: app.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
ffi/: .gitignore  Cargo.toml  build.rs
ffi/ffi.xcodeproj/: project.pbxproj
ffi/src/: api.rs
ios/Runner/: Info.plist  Runner-Bridging-Header.h  bridge_api.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: Main.storyboard
lib/: about.dart  bridge_api.dart  ffi.dart  global.dart  main.dart  native.dart  route.dart
lib/route/: route.dart
lib/views/: about.dart  config.dart  home.dart
lib/widget/: box_container.dart  button.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
linux/cmake/: CorrosionConfigVersion.cmake
linux/cmake/lib/cmake/Corrosion/: CorrosionConfig.cmake
macos/Runner/: Release.entitlements  RunnerDebug.entitlements  bridge_api.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: .gitignore  Cargo.toml  build.rs
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_api.rs  lib.rs
rust/: Cargo.toml  build.rs
rust/src/: api.rs  bridge_api.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
