[package]
name = "native"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1"

[dependencies]
base = { path = "../crates/base" }
flutter_rust_bridge = "1"
